Bug 307371 - telephone number entry field is used for resizing
Summary: telephone number entry field is used for resizing
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-25 09:31 UTC by qqqqqqqqq9
Modified: 2012-09-25 11:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
referenced picture (100.50 KB, image/png)
2012-09-25 09:32 UTC, qqqqqqqqq9
Details

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2012-09-25 09:31:27 UTC
When the New contact entry dialog is too small to hold all information, the new telephone numbers are cut off. Please look at the attached picture.

Reproducible: Always
Comment 1 qqqqqqqqq9 2012-09-25 09:32:14 UTC
Created attachment 74158 [details]
referenced picture
Comment 2 Laurent Montel 2012-09-25 10:02:58 UTC
it's not too big open combobox and you will see that it take the maximum size.

It's too small, but I don't know which minimum size used.
Size depend from country number of digit depend from country.
Comment 3 qqqqqqqqq9 2012-09-25 10:28:50 UTC
Hi, 
In the german translation the size determing entry is "Bevorzugte Telefonnummer" (preferred number). Why not shortening this to "Bevorzugte ..." and showing the whole only on mouse over? I think, showing the whole number is far more important than showing every entry of dropdown menu.
A typical german mobile number (including country code) has 13-15 digits, so i would assume, that that's a reasonable starting point. I think that would probably suffice for most countries and even if it doesn't you'll keep at least 80 % of the number in view. Please note that it gets even worse if one has more than four numbers as the appearing scrollbar further reduces the size of the number field. There's plenty of free space in the internet pane on the right side, can't you use that?
Comment 4 Laurent Montel 2012-09-25 11:18:40 UTC
Git commit 5d1a7e5469ad134d3fe422530d191c6e544b42f0 by Montel Laurent.
Committed on 25/09/2012 at 12:26.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 307371 - telephone number entry field is used for resizing

FIXED-IN: 4.9.2

M  +2    -0    akonadi/contact/editor/phoneeditwidget.cpp

http://commits.kde.org/kdepimlibs/5d1a7e5469ad134d3fe422530d191c6e544b42f0
Comment 5 Laurent Montel 2012-09-25 11:19:17 UTC
I increase minimum size it's better but not good for all users.