Fix Bug 307371 - telephone number entry field is used for resizing

FIXED-IN: 4.9.2
BUG: 307371